# Green-Hydrogen

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/: advanced_branches.md  assembly_walkthrough_baseline_rig.md  assembly_walkthrough_gankyil_a.md  assembly_walkthrough_gas_verification_rack.md  bom_bench_validation_rig.md  bom_power_solar_thermal_logging.md  bom_sensors_gas_safety.md  evidence_control_plane.md  first_build_target.md  gankyil_phase_management.md  hazard_register.md  maturity_model.md  project_snapshot.md  safety_policy.md  source_reuse_map.md  system_architecture.md  test_matrix.md  validation_plan.md
examples/: baseline_pem_1g_hr_run_intent.json  gankyil_ab_test_run_intent.json  plasma_assist_blocked_review_required.json  rejected_missing_evidence_bundle.json
schemas/: evidence_bundle.schema.json  run_intent.schema.json  safety_preflight.schema.json
scripts/: smoke_test.py
src/green_hydrogen/: __init__.py  acceptance.py  carbon_accounting.py  evidence_bundle.py  gankyil.py  metrics.py  policy.py  preflight.py  receipt.py  state_machine.py
tests/: test_acceptance.py  test_metrics_carbon_gankyil.py  test_policy_preflight.py
