[project]
name = "green-hydrogen"
version = "0.1.0"
description = "Measurement-first solar-assisted green-hydrogen validation scaffold"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Bryce Lovell"}]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
